--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-jest": "^23.0.0",
     "typescript": "^3.4.3",
     "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-spinner": "^1.0.3",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5"
   }
