--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuetify": "^1.5.5",
+    "vuetify": "^2.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -28,7 +28,7 @@
     "babel-core": "7.0.0-bridge.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
-    "node-sass": "^4.9.0",
+    "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
