Add local forage and make store for nurtition view

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.0",
     "babel-core": "7.0.0-bridge.0",
     "font-awesome": "^4.7.0",
+    "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
