--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,9 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": [
-      "webpack-env",
-      "jest",
-      "vuetify"
+    "typeRoots": [
+      "./node_modules/@types",
+      "@types"
     ],
     "paths": {
       "@/*": [
