--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@types/jest": "^23.1.4",
     "@types/localforage": "0.0.34",
+    "@types/lodash": "^4.14.138",
+    "@types/uuid": "^3.4.5",
     "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-typescript": "^3.7.0",
+    "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "@vue/test-utils": "1.0.0-beta.29",
@@ -29,6 +31,7 @@
     "babel-core": "7.0.0-bridge.0",
     "font-awesome": "^4.7.0",
     "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "sass": "^1.22.9",
     "sass-loader": "^7.1.0",
@@ -36,6 +39,7 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.0.0",
     "typescript": "^3.4.3",
+    "uuid": "^3.3.3",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-spinner": "^1.0.3",
     "vue-template-compiler": "^2.5.21",
